Colaboratory를 통해 생성됨

--- a/Greedy/이코테/[Day2]4_1이_될_때까지.ipynb
+++ b/Greedy/이코테/[Day2]4_1이_될_때까지.ipynb
@@ -3,11 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "4.1이 될 때까지.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNonAvThsK8kCmJFE/TkCaE",
+      "authorship_tag": "ABX9TyOKHXTo4U3XgBYgUBE0Dx2W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,147 +24,54 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lala991204/CodingTest/blob/master/Greedy/4_1%EC%9D%B4_%EB%90%A0_%EB%95%8C%EA%B9%8C%EC%A7%80.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lala991204/CodingTest/blob/master/Greedy/%EC%9D%B4%EC%BD%94%ED%85%8C/%5BDay2%5D4_1%EC%9D%B4_%EB%90%A0_%EB%95%8C%EA%B9%8C%EC%A7%80.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# 문제"
-      ],
-      "metadata": {
-        "id": "sih1Zvpdy3OS"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "nE3znlOCvl0u"
-      },
-      "outputs": [],
-      "source": [
-        "# 문제: 어떠한 수 N이 1이 될 떄까지 다음의 두 과정 중 하나를 반복적으로 선택해 수행하려 한다.\n",
-        "# 이때, 수행해야 하는 최소 횟수를 구하라.\n",
-        "# 1. N에서 1을 뺀다.\n",
-        "# 2. N을 K로 나눈다. (N이 K로 나누어떨어질 때만 선택 가능)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# 작성 코드"
-      ],
-      "metadata": {
-        "id": "tFKBYE4Jy7yV"
-      }
     },
     {
       "cell_type": "code",
       "source": [
-        "import time \n",
         "n, k = map(int, input().split())\n",
         "\n",
-        "start = time.time()\n",
-        "count = n % k\n",
-        "n -= n%k\n",
-        "while n!=1:\n",
-        "    n //= k\n",
-        "    count += 1\n",
-        "print(count)\n",
-        "end = time.time()\n",
-        "print(end-start)\n",
-        "\n",
-        "# 오답 이유 -> ex) 27 5 의 경우는 ok\n",
-        "# 아래처럼 25 3의 경우는 no\n",
-        "# 나누어떨어지는 과정까지 도달하기 위해 빼는 과정이 필요함.(반복적으로)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 262
-        },
-        "id": "G_4sCPTHwAMd",
-        "outputId": "6a11f03b-733e-48d6-9fe3-3b64eea0cb02"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "25 3\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-7bf8776cfed7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m!=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mn\u001b[0m \u001b[0;34m//=\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# 모범 답안"
-      ],
-      "metadata": {
-        "id": "7RfxRbVNy_WD"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# N, K를 공백으로 구분하여 입력받기\n",
-        "n, k = map(int, input().split())\n",
-        "\n",
-        "start = time.time()\n",
         "result = 0\n",
         "while True:\n",
-        "    # (N == 'K로 나누어떨어지는 수')가 될 때까지 1씩 빼기\n",
-        "    target = (n//k)*k\n",
-        "    result += (n-target)\n",
-        "    n = target\n",
-        "    # N이 K보다 작을 때 (더 이상 나눌 수 없을 때) 반복문 탈출\n",
-        "    if n < k:\n",
+        "    target = (n // k) * k   # 그리디에서 중요한 아이디어!!\n",
+        "    result += (n - target)\n",
+        "    n = target       # CHECK\n",
+        "    if n < k:    # 더 이상 나누지 못할 때까지 => 조건 추가해줘야 함.\n",
         "        break\n",
-        "    # K로 나누기\n",
-        "    result += 1\n",
+        "    result += 1    # 나누어 떨어지는 것 포함     # CHECK\n",
         "    n //= k\n",
         "\n",
-        "# 마지막으로 남은 수에 대해 1씩 빼기\n",
-        "result += (n-1)\n",
-        "print(result)\n",
-        "end = time.time()\n",
-        "print(end-start)\n",
-        "\n",
-        "# Tip1: N이 K의 배수가 될 때까지 1씩 빼기 -> N을 K로 나누기 (반복할 수 없을 때까지 반복)"
+        "result += (n - 1)  # 1제외 남은 카운트 포함\n",
+        "print(result)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "2iNHBpuay1fa",
-        "outputId": "b7c11ed1-60aa-4015-af1b-0057c08434d7"
+        "id": "ZPFI9qnGFzAQ",
+        "outputId": "542f97d7-4ba5-4dd6-becf-e2558b18d82d"
       },
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "25 3\n",
-            "6\n",
-            "0.0009095668792724609\n"
+            "6\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dOPUI7QgFzSA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
